--- a/package.json
+++ b/package.json
@@ -66,6 +66,9 @@
     "typescript": "^5.8.2",
     "typescript-eslint": "^8.20.0"
   },
+  "prisma": {
+    "seed": "node prisma/seed.js"
+  },
   "jest": {
     "moduleFileExtensions": [
       "js",
