--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "cache-manager-ioredis": "^2.1.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "dotenv": "^16.5.0",
     "firebase": "^11.5.0",
     "firebase-admin": "^13.2.0",
     "ioredis": "^5.6.1",
