--- a/package.json
+++ b/package.json
@@ -28,9 +28,10 @@
     "@nestjs/core": "^11.0.12",
     "@nestjs/platform-express": "^11.0.12",
     "@nestjs/platform-socket.io": "^11.0.12",
+    "@nestjs/swagger": "^11.2.0",
     "@nestjs/websockets": "^11.0.12",
     "@prisma/client": "^6.5.0",
-    "cache-manager": "^6.4.2",
+    "cache-manager": "^6.4.3",
     "cache-manager-ioredis": "^2.1.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
@@ -38,10 +39,10 @@
     "firebase": "^11.5.0",
     "firebase-admin": "^13.2.0",
     "ioredis": "^5.6.1",
-    "nestjs-redis": "^1.3.3",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.2",
-    "socket.io": "^4.8.1"
+    "socket.io": "^4.8.1",
+    "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
