--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@types/firebase": "^3.2.3",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.13.11",
+    "@types/sanitize-html": "^2.16.0",
     "@types/socket.io": "^3.0.2",
     "@types/supertest": "^6.0.2",
     "eslint": "^9.23.0",
