--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@nestjs/platform-express": "^11.0.12",
     "@nestjs/platform-socket.io": "^11.0.12",
     "@nestjs/swagger": "^11.2.0",
+    "@nestjs/throttler": "^6.4.0",
     "@nestjs/websockets": "^11.0.12",
     "@prisma/client": "^6.5.0",
     "cache-manager": "^6.4.3",
@@ -42,7 +43,8 @@
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.2",
     "socket.io": "^4.8.1",
-    "swagger-ui-express": "^5.0.1"
+    "swagger-ui-express": "^5.0.1",
+    "zod": "^3.24.4"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
@@ -52,6 +54,7 @@
     "@nestjs/testing": "^11.0.12",
     "@swc/cli": "^0.6.0",
     "@swc/core": "^1.10.7",
+    "@types/cache-manager-redis-store": "^3.0.0",
     "@types/express": "^5.0.1",
     "@types/firebase": "^3.2.3",
     "@types/jest": "^29.5.14",
