feat: Add Firebase and database configuration to environment files, update package.json for axios, and configure Vercel settings

--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
   "license": "UNLICENSED",
   "scripts": {
     "build": "nest build",
+    "vercel-build": "npm run prisma:generate && npm run prisma:deploy && nest build",
+    "prisma:generate": "prisma generate",
+    "prisma:deploy": "prisma migrate deploy",
     "type": "module",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
@@ -32,6 +35,7 @@
     "@nestjs/throttler": "^6.4.0",
     "@nestjs/websockets": "^11.0.12",
     "@prisma/client": "^6.5.0",
+    "axios": "^1.9.0",
     "cache-manager": "^6.4.3",
     "cache-manager-ioredis": "^2.1.0",
     "class-transformer": "^0.5.1",
@@ -54,6 +58,7 @@
     "@nestjs/testing": "^11.0.12",
     "@swc/cli": "^0.6.0",
     "@swc/core": "^1.10.7",
+    "@types/axios": "^0.14.4",
     "@types/cache-manager-redis-store": "^3.0.0",
     "@types/express": "^5.0.1",
     "@types/firebase": "^3.2.3",
