--- a/package.json
+++ b/package.json
@@ -40,9 +40,12 @@
     "cache-manager-ioredis": "^2.1.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "compression": "^1.8.0",
     "dotenv": "^16.5.0",
+    "express-rate-limit": "^7.5.0",
     "firebase": "^11.5.0",
     "firebase-admin": "^13.2.0",
+    "helmet": "^8.1.0",
     "ioredis": "^5.6.1",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.2",
