--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,11 +19,6 @@
     "strictBindCallApply": false,
     "noFallthroughCasesInSwitch": false,
     "resolveJsonModule": true,
-    "esModuleInterop": true,
-    "paths": {
-      "src/*": ["src/*"],
-      "prisma/*": ["prisma/*"],
-      "@/*": ["src/*"]
-    }
+    "esModuleInterop": true
   }
 }
